--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -57,7 +57,23 @@
   
     transition: background-color 0.2s;
   }
-  .countdownButton:hover {
+  .countdownButton:not(:disabled):hover {
     background: var(--dark-blue);
 
+  }
+
+  .countdownButtonActive {
+    background-color: var(--white);
+    color: var(--title)
+  }
+
+  .countdownButtonActive:not(:disabled):hover {
+    background-color: var(--red);
+    color: var(--white)
+  }
+
+  .countdownButton:disabled {
+    background-color: var(--grey-line);
+    color: var(--title);
+    cursor: not-allowed;
   }
