Fianalizing the Challenge box component

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,12 @@
     }
 }
 
+@media(min-height: 600px) {
+    html {
+        font-size: 80.5%;
+    }
+}
+
 
 body {
     background-color: var(--background);
