--- a/src/styles/components/Countdown.module.css
+++ b/src/styles/components/Countdown.module.css
@@ -22,6 +22,12 @@
   .countdownContainer div span {
     flex: 1;
   }
+  .countdownContainer div span:first-child {
+    border-right: 1px solid #f0f1f3;
+  }
+  .countdownContainer div span:last-child {
+    border-left: 1px solid #f0f1f3;
+  }
   
   .countdownContainer div span:first-child {
     border-right: 1px solid #f0f1f3;
